[package]
name = "fantacon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "*"
mlua = { version = "*", features = ["vendored", "luajit-src", "luajit"] }
meval = "*"
anyhow = "*"
rayon = "*"
lazy_static = "*"
